--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>I am Strata</strong>, a super simple<br />
-					responsive site template freebie<br />
-					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
+					<h1>I am <strong>Peisen Zhao</strong>, <br />
+					a PhD student in <a href="http://mediabrain.sjtu.edu.cn/"> MediaBrain </a>,<br />
+					Shanghai Jiao Tong University. </h1>
 				</div>
 			</header>
 
@@ -29,10 +29,9 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Ipsum lorem dolor aliquam ante commodo<br />
-							magna sed accumsan arcu neque.</h2>
+							<h2>Profiles</h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+						<p>I received my B.E. degree from the University of Electronic Science and Technology of China (UESTC), Chengdu, China, in 2016. I have been working towards a Ph.D. at the Cooperative Meidianet Innovation Center (CMIC), Shanghai Jiao Tong University, since 2016. My research interests include action recognition, action localization, and video analysis.</p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
@@ -40,37 +39,27 @@
 
 				<!-- Two -->
 					<section id="two">
-						<h2>Recent Work</h2>
+						<h2>Publications</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/fulls/P-WTAL.jpg" class="image fit thumb"><img src="images/publications/P-WTAL.jpg" alt="" /></a>
+								<h3> Point-Level Temporal Action Localization: Bridging Fully-supervised Proposals to Weakly-supervised Losses <a href="https://arxiv.org/abs/2012.08236"> [arXiv preprint] </a></h3>
+								<p>Chen Ju, <font color="black"> Peisen Zhao</font>, Ya Zhang, Yanfeng Wang, and Qi Tian, "Point-Level Temporal Action Localization: Bridging Fully-supervised Proposals to Weakly-supervised Losses", Dec 2020.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/fulls/OAD.jpg" class="image fit thumb"><img src="images/publications/OAD.jpg" alt="" /></a>
+								<h3> Privileged Knowledge Distillation for Online Action Detection <a href="https://arxiv.org/abs/2011.09158"> [arXiv preprint] </a></h3>
+								<p><font color="black"> Peisen Zhao</font>, Lingxi Xie, Ya Zhang, Yanfeng Wang and Qi Tian, "Privileged Knowledge Distillation for Online Action Detection", Nov 2020.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Tortor metus commodo</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/fulls/BU-TAL-MR.jpg" class="image fit thumb"><img src="images/publications/BU-TAL-MR.jpg" alt="" /></a>
+								<h3> Bottom-Up Temporal Action Localization with Mutual Regularization <a href="https://arxiv.org/abs/2002.07358"> [ECCV2020] </a></h3>
+								<p><font color="black"> Peisen Zhao</font>, Lingxi Xie, Chen Ju, Ya Zhang, Yanfeng Wang and Qi Tian, "Bottom-Up Temporal Action Localization with Mutual Regularization", in European Conference on Computer Vision (ECCV, Acceptance Rate ~ 27%), Glasgow, Scotland, UK, 2020.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>Quam neque phasellus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
-								<h3>Nunc enim commodo aliquet</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
-								<h3>Risus ornare lacinia</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/fulls/U2S.jpg" class="image fit thumb"><img src="images/publications/U2S.jpg" alt="" /></a>
+								<h3> Universal-to-Specific Framework for Complex Action Recognition <a href="https://arxiv.org/abs/2007.06149"> [TMM] </a></h3>
+								<p><font color="black"> Peisen Zhao</font>, Lingxi Xie, Ya Zhang and Qi Tian, "Universal-to-Specific Framework for Complex Action Recognition", to appear, in IEEE Transactions on Multimedia (TMM), 2020.</p>
 							</article>
 						</div>
 						<ul class="actions">
@@ -79,6 +68,7 @@
 					</section>
 
 				<!-- Three -->
+				<!--
 					<section id="three">
 						<h2>Get In Touch</h2>
 						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
@@ -115,6 +105,7 @@
 							</div>
 						</div>
 					</section>
+				-->
 
 				<!-- Four -->
 				<!--
@@ -440,10 +431,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
+						<li><a href="https://github.com/PeisenZhao" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://scholar.google.com/citations?user=hCr8Km8AAAAJ&hl=zh-CN" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
+						<li><a href="pszhao@sjtu.edu.cn" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
