--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 				<!-- Three -->
 					<section id="three">
 						<h2>Demo</h2>
-						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
+						<p>Comparision of Temporal Action Localization (TAL) results on THUMOS14 in terms of the Fully-supervised, Weakly-supervised, Point-Level-supervised, and Online settings.</p>
 						<div class="row"></div>
-							<video width="320" height="240" controls>
+							<video width="1280" height="720" controls>
 								<source src="images/demo.mp4" type="video/mp4">
 							</video>
 						</div>
